--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Fanzora - Fantasy Sports Arena</title>
   <style>
+    /* --- Your original styles with some additions --- */
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
@@ -22,6 +23,7 @@
       color: white;
       margin: 0 1rem;
       text-decoration: none;
+      cursor: pointer;
     }
     .hero {
       background: linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.8)), url('https://placehold.co/1920x1080') center/cover no-repeat;
@@ -46,22 +48,25 @@
       border: none;
       cursor: pointer;
       animation: pulse 2s infinite;
+      border-radius: 8px;
     }
     .section {
       padding: 2rem;
       max-width: 1000px;
       margin: auto;
     }
-    .score {
+    .score, .contest, .player {
       background: #1A1A1A;
       padding: 1rem;
       margin-bottom: 1rem;
       border-radius: 10px;
     }
-    select {
+    select, input {
       padding: 0.5rem;
-      margin-bottom: 1rem;
+      margin: 0.5rem 0;
       font-size: 1rem;
+      border-radius: 6px;
+      border: none;
     }
     footer {
       text-align: center;
@@ -69,7 +74,6 @@
       background: #1A1A1A;
       color: #A0A0A0;
     }
-
     @keyframes fadeInUp {
       from {
         opacity: 0;
@@ -80,7 +84,6 @@
         transform: translateY(0);
       }
     }
-
     @keyframes pulse {
       0%, 100% {
         box-shadow: 0 0 20px #00FF7F;
@@ -89,102 +92,316 @@
         box-shadow: 0 0 40px #00FF7F;
       }
     }
+    /* Extra styles */
+    #teamSelection .player {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    #leaderboard div {
+      margin: 0.5rem 0;
+    }
+    #userProfile {
+      margin-bottom: 2rem;
+    }
   </style>
+  <script src="https://js.stripe.com/v3/"></script>
 </head>
 <body>
 
-  <header>
-    <div style="color:#007BFF; font-size: 1.8rem; font-weight: bold;">Fanzora</div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Leagues</a>
-      <a href="#">Contests</a>
-      <a href="#">My Team</a>
-    </nav>
-    <button class="btn" onclick="login()">Sign Up / Login</button>
-  </header>
+<header>
+  <div style="color:#007BFF; font-size: 1.8rem; font-weight: bold;">Fanzora</div>
+  <nav>
+    <a onclick="showSection('home')">Home</a>
+    <a onclick="showSection('leagues')">Leagues</a>
+    <a onclick="showSection('contests')">Contests</a>
+    <a onclick="showSection('myteam')">My Team</a>
+    <a onclick="showSection('leaderboard')">Leaderboard</a>
+  </nav>
+  <button class="btn" onclick="handleLoginLogout()" id="loginBtn">Sign Up / Login</button>
+</header>
 
-  <section class="hero">
-    <h1>Unleash Your Inner Football Guru</h1>
-    <p>Fanzora: The ultimate fantasy arena to challenge your sports knowledge in real time.</p>
-    <button class="btn" onclick="loadScores()">Join the Arena</button>
-  </section>
+<section class="hero" id="homeSection">
+  <h1>Unleash Your Inner Football Guru</h1>
+  <p>Fanzora: The ultimate fantasy arena to challenge your sports knowledge in real time.</p>
+  <button class="btn" onclick="loadScores()">Join the Arena</button>
+</section>
 
-  <section class="section">
-    <h2>Choose Sport</h2>
-    <select id="sportSelect" onchange="loadScores()">
-      <option value="football">Football</option>
-      <option value="basketball">Basketball</option>
-    </select>
+<section class="section" id="leaguesSection" style="display:none;">
+  <h2>Choose Sport</h2>
+  <select id="sportSelect" onchange="loadScores()">
+    <option value="football">Football</option>
+    <option value="basketball">Basketball</option>
+  </select>
+  <div id="scores">Select a sport and load scores.</div>
+</section>
 
-    <div id="scores"></div>
-  </section>
+<section class="section" id="contestsSection" style="display:none;">
+  <h2>Create a Contest</h2>
+  <input type="text" id="contestName" placeholder="Contest Name" />
+  <input type="number" id="entryFee" placeholder="Entry Fee ($)" min="1" />
+  <button class="btn" onclick="createContest()">Create Contest</button>
+  <div id="contestList"></div>
+</section>
 
-  <footer>
-    &copy; 2024 Fanzora. All rights reserved.
-  </footer>
+<section class="section" id="myteamSection" style="display:none;">
+  <h2>Your Team Selection</h2>
+  <div id="teamSelection"></div>
+  <button class="btn" onclick="saveTeam()">Save Team</button>
+</section>
 
-  <script>
-    function login() {
-      const age = prompt("Enter your age:");
-      if (parseInt(age) < 18) {
-        alert("You must be 18 or older to use Fanzora.");
-      } else {
-        alert("Welcome to Fanzora!");
-      }
+<section class="section" id="leaderboardSection" style="display:none;">
+  <h2>Leaderboard</h2>
+  <div id="leaderboard"></div>
+</section>
+
+<section class="section" id="userProfile" style="display:none;">
+  <h2>User Profile</h2>
+  <p id="profileName"></p>
+  <p id="profileAge"></p>
+  <button class="btn" onclick="logout()">Logout</button>
+</section>
+
+<footer>
+  &copy; 2024 Fanzora. All rights reserved.
+</footer>
+
+<script>
+// --- User Login & Profile management ---
+let currentUser = JSON.parse(localStorage.getItem('fanzoraUser')) || null;
+const loginBtn = document.getElementById('loginBtn');
+const userProfileSection = document.getElementById('userProfile');
+
+function handleLoginLogout() {
+  if (currentUser) {
+    // Already logged in - show profile
+    showUserProfile();
+  } else {
+    login();
+  }
+}
+
+function login() {
+  const username = prompt("Enter your username:");
+  if (!username) return alert("Username required.");
+
+  const age = prompt("Enter your age:");
+  if (!age || parseInt(age) < 18) {
+    alert("You must be 18 or older to use Fanzora.");
+    return;
+  }
+
+  currentUser = {
+    name: username,
+    age: parseInt(age),
+    fantasyPoints: 0,
+    team: []
+  };
+  localStorage.setItem('fanzoraUser', JSON.stringify(currentUser));
+  loginBtn.textContent = `Welcome, ${currentUser.name}`;
+  alert("Login successful!");
+  showUserProfile();
+}
+
+function logout() {
+  currentUser = null;
+  localStorage.removeItem('fanzoraUser');
+  loginBtn.textContent = "Sign Up / Login";
+  userProfileSection.style.display = 'none';
+  showSection('home');
+}
+
+function showUserProfile() {
+  document.getElementById('profileName').textContent = `Name: ${currentUser.name}`;
+  document.getElementById('profileAge').textContent = `Age: ${currentUser.age}`;
+  userProfileSection.style.display = 'block';
+  showSection('myteam');
+}
+
+// --- Navigation ---
+function showSection(section) {
+  const sections = ['home', 'leagues', 'contests', 'myteam', 'leaderboard'];
+  sections.forEach(s => {
+    document.getElementById(s + 'Section').style.display = s === section ? 'block' : 'none';
+  });
+  userProfileSection.style.display = 'none';
+}
+
+// --- Live Scores ---
+function loadScores() {
+  const sport = document.getElementById('sportSelect').value;
+  const scoresContainer = document.getElementById('scores');
+  scoresContainer.innerHTML = 'Loading...';
+
+  let url = '';
+  let host = '';
+
+  if (sport === 'football') {
+    url = 'https://api-football-v1.p.rapidapi.com/v3/fixtures?live=all';
+    host = 'api-football-v1.p.rapidapi.com';
+  } else if (sport === 'basketball') {
+    url = 'https://api-basketball.p.rapidapi.com/games?league=12&season=2024&live=all';
+    host = 'api-basketball.p.rapidapi.com';
+  }
+
+  fetch(url, {
+    method: 'GET',
+    headers: {
+      'X-RapidAPI-Key': 'db2d688e15mshc5c4628851de414p19f157jsnbbdea597f1b8',
+      'X-RapidAPI-Host': host
     }
-
-    async function loadScores() {
-      const sport = document.getElementById('sportSelect').value;
-      const scoresContainer = document.getElementById('scores');
-      scoresContainer.innerHTML = 'Loading...';
-
-      let url = '';
-      let host = '';
-
-      if (sport === 'football') {
-        url = 'https://api-football-v1.p.rapidapi.com/v3/fixtures?live=all';
-        host = 'api-football-v1.p.rapidapi.com';
-      } else if (sport === 'basketball') {
-        url = 'https://api-basketball.p.rapidapi.com/games?league=12&season=2024&live=all';
-        host = 'api-basketball.p.rapidapi.com';
-      }
-
-      try {
-        const res = await fetch(url, {
-          method: 'GET',
-          headers: {
-            'X-RapidAPI-Key': 'db2d688e15mshc5c4628851de414p19f157jsnbbdea597f1b8',
-            'X-RapidAPI-Host': host
-          }
-        });
-
-        const data = await res.json();
-        const matches = data.response || [];
-
-        if (!matches.length) {
-          scoresContainer.innerHTML = '<p>No live games right now.</p>';
-          return;
-        }
-
-        scoresContainer.innerHTML = matches.map(match => `
-          <div class="score">
-            <strong>${match.teams?.home?.name || match.teams?.localTeam?.name} vs ${match.teams?.away?.name || match.teams?.visitorTeam?.name}</strong><br>
-            Score: ${match.goals?.home ?? match.scores?.home?.points} - ${match.goals?.away ?? match.scores?.away?.points}<br>
-            Status: ${match.status?.long || match.status?.description}
-          </div>
-        `).join('');
-      } catch (e) {
-        scoresContainer.innerHTML = '<p>Error loading scores.</p>';
-        console.error(e);
-      }
+  })
+  .then(res => res.ok ? res.json() : Promise.reject('Failed to load'))
+  .then(data => {
+    const matches = data.response || [];
+    if (matches.length === 0) {
+      scoresContainer.innerHTML = '<p>No live games right now.</p>';
+      return;
     }
+    scoresContainer.innerHTML = matches.map(match => `
+      <div class="score">
+        <strong>${match.teams?.home?.name || match.teams?.localTeam?.name} vs ${match.teams?.away?.name || match.teams?.visitorTeam?.name}</strong><br>
+        Score: ${match.goals?.home ?? match.scores?.home?.points ?? 'N/A'} - ${match.goals?.away ?? match.scores?.away?.points ?? 'N/A'}<br>
+        Fantasy Points: ${Math.floor(Math.random() * 100)}<br>
+        Status: ${match.status?.long || match.status?.description || 'N/A'}
+      </div>
+    `).join('');
+  })
+  .catch(e => {
+    scoresContainer.innerHTML = '<p>Error loading scores.</p>';
+    console.error(e);
+  });
+}
 
-    // Load on page load
-    loadScores();
-  </script>
+// --- Contest Creation & List ---
+const contests = JSON.parse(localStorage.getItem('fanzoraContests')) || [];
+function createContest() {
+  const name = document.getElementById('contestName').value.trim();
+  const fee = Number(document.getElementById('entryFee').value);
+  if (!name || !fee) return alert("Please enter all fields.");
+  contests.push({ name, fee });
+  localStorage.setItem('fanzoraContests', JSON.stringify(contests));
+  renderContests();
+  alert(`Contest "${name}" created with $${fee} entry fee!`);
+}
+function renderContests() {
+  const list = document.getElementById('contestList');
+  if (contests.length === 0) {
+    list.innerHTML = '<p>No contests created yet.</p>';
+    return;
+  }
+  list.innerHTML = contests.map(c => `<div class="contest"><strong>${c.name}</strong><br>Entry Fee: $${c.fee}</div>`).join('');
+}
+renderContests();
+
+// --- Team Selection ---
+const playersPool = [
+  { id: 1, name: 'Player A', position: 'Forward', fantasyPoints: 0 },
+  { id: 2, name: 'Player B', position: 'Midfielder', fantasyPoints: 0 },
+  { id: 3, name: 'Player C', position: 'Defender', fantasyPoints: 0 },
+  { id: 4, name: 'Player D', position: 'Goalkeeper', fantasyPoints: 0 },
+  { id: 5, name: 'Player E', position: 'Forward', fantasyPoints: 0 },
+  { id: 6, name: 'Player F', position: 'Midfielder', fantasyPoints: 0 },
+];
+const maxTeamSize = 5;
+
+function renderTeamSelection() {
+  const container = document.getElementById('teamSelection');
+  if (!currentUser) {
+    container.innerHTML = '<p>Please login to select your team.</p>';
+    return;
+  }
+  let html = '<p>Select your fantasy team (max 5 players):</p>';
+  playersPool.forEach(p => {
+    const checked = currentUser.team.includes(p.id) ? 'checked' : '';
+    html += `
+      <div class="player">
+        <label>
+          <input type="checkbox" value="${p.id}" ${checked} onchange="togglePlayer(${p.id}, this.checked)" />
+          ${p.name} (${p.position})
+        </label>
+      </div>`;
+  });
+  container.innerHTML = html;
+}
+function togglePlayer(playerId, checked) {
+  if (!currentUser) return alert("Please login first.");
+  if (checked) {
+    if (currentUser.team.length >= maxTeamSize) {
+      alert(`Max team size is ${maxTeamSize}.`);
+      document.querySelector(`#teamSelection input[value='${playerId}']`).checked = false;
+      return;
+    }
+    currentUser.team.push(playerId);
+  } else {
+    currentUser.team = currentUser.team.filter(id => id !== playerId);
+  }
+}
+function saveTeam() {
+  if (!currentUser) return alert("Please login first.");
+  localStorage.setItem('fanzoraUser', JSON.stringify(currentUser));
+  alert("Team saved!");
+  // Optionally update fantasy points randomly for demo:
+  currentUser.fantasyPoints = currentUser.team.length * 10 + Math.floor(Math.random()*50);
+  saveUserAndUpdateLeaderboard();
+}
+
+// --- Leaderboard ---
+function saveUserAndUpdateLeaderboard() {
+  // Save current user fantasy points to leaderboard (localStorage)
+  let leaderboard = JSON.parse(localStorage.getItem('fanzoraLeaderboard')) || [];
+  const existingIndex = leaderboard.findIndex(u => u.name === currentUser.name);
+  if (existingIndex !== -1) leaderboard.splice(existingIndex, 1); // remove old record
+  leaderboard.push({ name: currentUser.name, points: currentUser.fantasyPoints });
+  leaderboard.sort((a,b) => b.points - a.points);
+  localStorage.setItem('fanzoraLeaderboard', JSON.stringify(leaderboard));
+  renderLeaderboard();
+}
+function renderLeaderboard() {
+  const lb = JSON.parse(localStorage.getItem('fanzoraLeaderboard')) || [];
+  const container = document.getElementById('leaderboard');
+  if (lb.length === 0) {
+    container.innerHTML = '<p>No leaderboard data yet.</p>';
+    return;
+  }
+  container.innerHTML = lb.map((user, idx) => `<div>${idx+1}. <strong>${user.name}</strong> - ${user.points} pts</div>`).join('');
+}
+
+// --- Stripe Payment Integration ---
+// Replace with your own Stripe publishable key for real use
+const stripe = Stripe('pk_test_51Mtx...your_test_key_here...');
+
+function payEntryFee(amount) {
+  if (!currentUser) return alert("Please login first.");
+
+  // This example uses Stripe Checkout redirect (test mode only)
+  stripe.redirectToCheckout({
+    lineItems: [{ price: 'price_12345', quantity: 1 }], // Replace with your price ID
+    mode: 'payment',
+    successUrl: window.location.href + '?payment=success',
+    cancelUrl: window.location.href + '?payment=cancel',
+    customerEmail: currentUser.name + '@example.com',
+  }).then(function (result) {
+    if (result.error) {
+      alert(result.error.message);
+    }
+  });
+}
+
+// --- Initialize ---
+if (currentUser) {
+  loginBtn.textContent = `Welcome, ${currentUser.name}`;
+  showUserProfile();
+} else {
+  showSection('home');
+}
+renderTeamSelection();
+renderLeaderboard();
+</script>
+
 </body>
 </html>
+
 
 
 
